100-only-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app1.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app2.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app3.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app4.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app4.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app5.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app5.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app6.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app6.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app7.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app7.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app8.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app8.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app9.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app9.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app10.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app10.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app11.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app11.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app12.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app12.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app13.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app13.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app14.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app14.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app15.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app15.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app16.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app16.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app17.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app17.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app18.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app18.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app19.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app19.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app20.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app20.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app21.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app21.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app22.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app22.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app23.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app23.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app24.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app24.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app25.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app25.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app26.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app26.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app27.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app27.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app28.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app28.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app29.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app29.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app30.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app30.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app31.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app31.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app32.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app32.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app33.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app33.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app34.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app34.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app35.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app35.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app36.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app36.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app37.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app37.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app38.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app38.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app39.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app39.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app40.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app40.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app41.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app41.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app42.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app42.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app43.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app43.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app44.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app44.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app45.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app45.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app46.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app46.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app47.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app47.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app48.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app48.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app49.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app49.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app50.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app50.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app51.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app51.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app52.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app52.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app53.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app53.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app54.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app54.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app55.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app55.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app56.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app56.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app57.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app57.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app58.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app58.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app59.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app59.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app60.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app60.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app61.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app61.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app62.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app62.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app63.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app63.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app64.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app64.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app65.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app65.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app66.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app66.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app67.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app67.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app68.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app68.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app69.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app69.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app70.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app70.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app71.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app71.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app72.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app72.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app73.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app73.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app74.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app74.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app75.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app75.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app76.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app76.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app77.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app77.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app78.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app78.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app79.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app79.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app80.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app80.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app81.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app81.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app82.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app82.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app83.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app83.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app84.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app84.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app85.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app85.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app86.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app86.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app87.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app87.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app88.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app88.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app89.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app89.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app90.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app90.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app91.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app91.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app92.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app92.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app93.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app93.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app94.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app94.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app95.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app95.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app96.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app96.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app97.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app97.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app98.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app98.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app99.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app99.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app100.f5k8s.net
  namespace: apps
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app100.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
